discussion/kv_engine/155717/155717_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

Refactor: EngineIface to use references over gsl::not_null<>

Replace gsl::not_null<> with ref to the type

This patch was created following these steps:
1. Use CLion's refactor signature functionality for each method in
DcpIface.
2. Add/remove derefs or refs where needed, found by compiling the source
code.
3. Reformat includes and remove gsl-light include in engine.h

Change-Id: Iff5327c05d10b9fc94438231e0c09eecae063d53

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2021-06-14 14:10:20.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-14 14:43:01.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9867/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include "spdlog/logger.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/statistics/stats.def.h:131:10: error: "stats_config.def.h" file not found [clang-diagnostic-error]
#include "stats_config.def.h" // NOLINT(*)
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9867/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10:
error: "spdlog/logger.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9867/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8457/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36860/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/377/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31489/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10519/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11438/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11864/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11591/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19453/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-15 09:36:24.000000000
Message: 
Patch Set 2: Verified+1

Build Successful 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8457/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36860/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/377/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31489/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10519/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11438/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11864/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11591/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19453/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9890/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
